Closed Bug 1591858 Opened 5 years ago Closed 5 years ago

[MIPS] Fix build failures on MIPS caused by recent updates (store64, load64) .

Categories

(Core :: JavaScript Engine: JIT, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla72
Tracking Status
firefox72 --- fixed

People

(Reporter: zhaojiazhong-hf, Assigned: zhaojiazhong-hf)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:71.0) Gecko/20100101 Firefox/71.0

Steps to reproduce:

Build js on MIPS64el platform

Actual results:

Failed because store64 and load64 function on MIPS platform don't support Imm64 and BaseIndex as parameters.

Expected results:

Build js program successfully.

Attachment #9104585 - Attachment description: Bug 1591858 - [MIPS] Add support of load64 and store64 for Imm64 and BaseIndex values as parameters. r=jandem → Bug 1591858 - [MIPS] Add support of load64 and store64 for BaseIndex values as parameters. r=jandem
Pushed by rmaries@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/92c04767a1a4
[MIPS] Add support of load64 and store64 for BaseIndex values as parameters. r=jandem
Status: UNCONFIRMED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72
Assignee: nobody → zhaojiazhong-hf
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: