Bug 1591858 - [MIPS] Add support of load64 and store64 for BaseIndex values as parameters. r=jandem

Differential Revision: https://phabricator.services.mozilla.com/D50778